# macloop

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
cli_tester/: Cargo.toml
cli_tester/src/: main.rs
core_engine/: Cargo.toml
core_engine/src/: analyzer.rs  config.rs  converter.rs  delay_measurement.rs  engine.rs  format.rs  lib.rs  metrics.rs  modular_pipeline.rs  processor.rs  stats.rs
core_engine/src/outputs/: asr_sink.rs  mod.rs  wav_file.rs
core_engine/src/processors/: aec.rs  noise_suppression.rs  quantizer.rs  resample.rs
core_engine/src/sources/: app_audio.rs  microphone.rs  mod.rs  screen_capture.rs  synthetic.rs  system_audio.rs
examples/: _bootstrap.py  pyproject.toml  sherpa_asr_demo.py  smoke_browser_to_wav.py  smoke_mic_to_wav.py  smoke_system_to_asr_async.py  smoke_system_to_wav.py  write_to_wav.py
macloop/: __init__.py  __init__.pyi  _macloop.pyi
python_ffi/: Cargo.toml
python_ffi/src/: capture.rs  config.rs  lib.rs  stats.rs
scripts/: ci_build_and_repair_wheel.sh  ci_setup_test_env.sh  ci_smoke_test_wheel.sh  debug_swift_runtime.sh  repair_swift_wheel.py  resolve_swift_runtime.py  swift_runtime.py
src/: capture.rs  config.rs  lib.rs  messages.rs  modular_pipeline.rs  stats.rs
src/processors/: aec.rs  mod.rs  noise_suppression.rs  resample.rs  timestamp.rs
tests/: conftest.py  test_audio_sources.py  test_config_defaults.py  test_e2e_synthetic.py  test_ffi_backend.py  test_medium_e2e_real_capture.py  test_public_api.py  test_runtime_helpers.py
