[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "macloop"
dynamic = ["version"]
description = "Python toolkit for macOS app audio capture and ASR/transcription pipelines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Typing :: Typed",
]
keywords = [
    "audio",
    "macos",
    "python",
    "microphone",
    "system-audio",
    "app-audio",
    "zoom",
    "blackhole-alternative",
    "asr",
    "speech-to-text",
    "transcription",
    "recording",
    "rust",
    "numpy",
]
dependencies = [
    "numpy>=1.21.6",
]

[project.urls]
Homepage = "https://github.com/kemsta/macloop"
Repository = "https://github.com/kemsta/macloop"
Issues = "https://github.com/kemsta/macloop/issues"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
python-source = "."
module-name = "macloop._macloop"
manifest-path = "python_ffi/Cargo.toml"
include = [
    { path = "LICENSE", format = "sdist" },
]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.2",
    "pytest-cov>=5.0.0",
]
