[package]
name = "python_ffi"
version = "0.1.1"
edition = "2021"
description = "Python bindings and control plane for macloop"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/kemsta/macloop"
homepage = "https://github.com/kemsta/macloop"

[lib]
name = "_macloop"
crate-type = ["cdylib"]

[dependencies]
core_engine = { path = "../core_engine" }
numpy = "0.28.0"
pyo3 = { version = "0.28.2", features = ["abi3-py39"] }
